force-app/main/default/objects/Item__c/Item__c.object-meta.xml
<CustomObject>
    <label>Item</label>
    <pluralLabel>Items</pluralLabel>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description
  >The Item object represents purchasable products in the catalog. It stores Description, Type, Family (both restricted picklists), Price, and an Image URL auto-populated from Unsplash. Commonly used for catalog browsing, item filtering, and purchase line creation.</description>
</CustomObject>