force-app/main/default/objects/Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>Free-text description of the item</description>
    <inlineHelpText
  >Enter a brief description of the item's purpose and features</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>