force-app/main/default/objects/Item__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <description
  >Groups the item into a product family for filtering purposes</description>
    <inlineHelpText
  >Select the product family this item belongs to</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Displays</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>