force-app/main/default/objects/Item__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <description
  >URL link to the item image fetched from Unsplash API</description>
    <inlineHelpText
  >Auto-populated from Unsplash when the item is created by a manager</inlineHelpText>
    <type>Url</type>
</CustomField>