force-app/main/default/objects/Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <description
  >Unit price of the item used as default UnitCost on purchase lines</description>
    <inlineHelpText>Enter the price for one unit of this item</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>