force-app/main/default/objects/Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <description
  >Categorizes the item by type for filtering purposes</description>
    <inlineHelpText
  >Select the item type used for catalog filtering</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computers</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Appliances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>